--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
 <body>
     <div id="wrap">
-        <div id="box1"></div>
-        <div id="box2"></div>
+        <div class="box" id="box1"></div>
+        <div class="box" id="box2"></div>
+        <div class="box" id="box3"></div>
     </div>
 </body>
