--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="wrap">
         <div class="box" id="box1"></div>
-        <div class="box" id="box2"></div>
-        <div class="box" id="box3"></div>
+        <!-- <div class="box" id="box2"></div>
+        <div class="box" id="box3"></div> -->
     </div>
 </body>
