--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 
 <body>
+    <div id="clickstatus"></div>
+    <div id="movestatus"></div>
     <div id="wrap">
         <div class="box" id="box1"></div>
-        <!-- <div class="box" id="box2"></div>
-        <div class="box" id="box3"></div> -->
     </div>
 </body>
